--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.395.0",
